--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           <label class="photo" id="p2"> <div class="hint">Click to upload photo 2</div><input type="file" accept="image/*" data-target="p2" /></label>
           <label class="photo" id="p3"> <div class="hint">Click to upload photo 3</div><input type="file" accept="image/*" data-target="p3" /></label>
         </div>
-        <div style="margin-top:8px;font-size:13px;color:rgba(247,236,235,0.6)">Tip: Click any photo to pick an image from your phone — it will show immediately and stay client-side.</div>
+        <div style="margin-top:8px;font-size:13px;color:rgba(247,236,235,0.6)">
       </div>
 
       <div class="section">
@@ -125,7 +125,7 @@
         </div>
       </div>
 
-      <footer>Open this quietly when he’s alone — trust me 😏</footer>
+     
     </div>
 
     <!-- right column -->
@@ -147,9 +147,7 @@
       <div class="panel">
         <h3 style="margin:0 0 8px 0">Quick Tips</h3>
         <ul style="margin:0;padding-left:18px;color:rgba(247,236,235,0.75)">
-          <li>Tap the hearts in the game to score — watch for golden hearts for bonus points.</li>
-          <li>Click any photo placeholder to upload your pictures from phone or PC.</li>
-          <li>To change letter text, open the file and edit the paragraph inside the .letter block.</li>
+          
         </ul>
       </div>
     </div>
@@ -187,11 +185,12 @@
   let running = false;
   let spawnInterval = null;
   const messages = [
-    "You sweet little heart 💘",
+    "My sweet little heart 💘",
     "Miss you already 😌",
-    "Best kiss provider 😚",
+    "Best bf ever 😚",
     "I love you 💝",
     "More cuddles pls 🥺"
+    " My darling boyy"
   ];
 
   function spawnHeart(){
