--- a/index.html
+++ b/index.html
@@ -3,264 +3,41 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Love Letter for Abuu</title>
+<title>Love Letter for Abuu Babyy</title>
 <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
+    * {margin:0; padding:0; box-sizing:border-box;}
     body {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         background: linear-gradient(135deg, #fce4ec, #ffe0b2);
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        min-height: 100vh;
-        overflow-x: hidden;
-        padding: 10px;
+        display:flex; flex-direction:column; align-items:center;
+        overflow-x:hidden; padding:10px;
     }
 
-    header {
-        margin-top: 15px;
-        font-size: 2.2rem;
-        font-weight: bold;
-        color: #d81b60;
-        text-align: center;
-        text-shadow: 1px 1px #fff5;
-        animation: fadeIn 2s ease-in-out;
-    }
+    header {margin-top:15px; font-size:2.2rem; font-weight:bold; color:#d81b60; text-align:center; text-shadow:1px 1px #fff5; animation:fadeIn 2s ease-in-out;}
 
     .letter {
-        max-width: 90%;
-        background: #ffffffcc;
-        padding: 15px;
-        margin: 15px 0;
-        border-radius: 20px;
-        box-shadow: 0 8px 16px rgba(0,0,0,0.2);
-        font-size: 1rem;
-        line-height: 1.5;
-        color: #333;
-        animation: fadeInUp 1.5s ease-in-out;
+        max-width:90%; background:#ffffffcc; padding:15px; margin:15px 0; border-radius:20px;
+        box-shadow:0 8px 16px rgba(0,0,0,0.2); font-size:1rem; line-height:1.5; color:#333; animation:fadeInUp 1.5s ease-in-out;
         white-space: pre-wrap;
     }
 
     .photos {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        gap: 10px;
-        margin: 15px 0;
-        animation: fadeIn 2s ease-in-out;
+        display:flex; flex-wrap:wrap; justify-content:center; gap:10px; margin:15px 0; animation:fadeIn 2s ease-in-out;
     }
 
     .photos img {
-        width: 30vw;
-        max-width: 150px;
-        height: 30vw;
-        max-height: 150px;
-        object-fit: cover;
-        border-radius: 15px;
-        cursor: pointer;
-        transition: transform 0.2s;
+        width:30vw; max-width:150px; height:30vw; max-height:150px; object-fit:cover; border-radius:15px;
+        cursor:pointer; transition:transform 0.2s;
     }
 
-    .photos img:hover {
-        transform: scale(1.05);
+    .photos img:hover {transform:scale(1.05);}
+
+    .envelopes {display:flex; justify-content:center; gap:15px; margin-bottom:15px;}
+    .envelope {
+        width:80px; height:80px; background:#f8bbd0; border-radius:10px; display:flex; align-items:center; justify-content:center;
+        cursor:pointer; position:relative; box-shadow:0 4px 8px rgba(0,0,0,0.2); transition:transform 0.3s;
     }
-
-    .notes {
-        display: flex;
-        flex-direction: column;
-        gap: 8px;
-        margin-bottom: 15px;
-        width: 90%;
-        animation: fadeIn 2s ease-in-out;
-    }
-
-    .note {
-        background: #f8bbd0;
-        padding: 8px;
-        border-radius: 10px;
-        text-align: center;
-        font-weight: 500;
-        color: #880e4f;
-        font-size: 0.95rem;
-    }
-
-    .scoreboard {
-        font-size: 1.3rem;
-        color: #d81b60;
-        margin-bottom: 10px;
-        animation: fadeIn 2s ease-in-out;
-    }
-
-    .game-container {
-        position: relative;
-        width: 90%;
-        max-width: 300px;
-        height: 300px;
-        background: #ffe0b2;
-        border-radius: 20px;
-        overflow: hidden;
-        margin-bottom: 30px;
-        box-shadow: 0 8px 16px rgba(0,0,0,0.2);
-        animation: fadeInUp 1.5s ease-in-out;
-    }
-
-    .heart {
-        position: absolute;
-        font-size: 1.8rem;
-        cursor: pointer;
-        user-select: none;
-        transition: transform 0.2s;
-    }
-
-    .floating-heart {
-        position: fixed;
-        font-size: 1.5rem;
-        opacity: 0.7;
-        pointer-events: none;
-        animation: floatUp linear;
-    }
-
-    @keyframes floatUp {
-        0% { transform: translateY(0) scale(1); opacity: 1; }
-        100% { transform: translateY(-800px) scale(0.5); opacity: 0; }
-    }
-
-    .confetti {
-        position: absolute;
-        width: 5px;
-        height: 5px;
-        background: gold;
-        border-radius: 50%;
-        pointer-events: none;
-        animation: confettiFall 0.8s forwards;
-    }
-
-    @keyframes confettiFall {
-        0% { transform: translate(0,0) rotate(0deg); opacity: 1; }
-        100% { transform: translate(var(--x,0px), 100px) rotate(360deg); opacity: 0; }
-    }
-
-    @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
-    @keyframes fadeInUp { from { opacity:0; transform: translateY(30px); } to { opacity:1; transform: translateY(0); } }
-</style>
-</head>
-<body>
-
-<header>For My Abuu Babyy 💖</header>
-
-<div class="letter">
-My dearest sweet lil babyboyy
-
-I don't even know where to start...I know I mess up sometimes...okayyyy....maybee a LOT OF TIMESSSS but please know I never mean to hurt you. You mean everything to me.
-
-Everytime I think of u, I smile like a damn fool. You are my comfort, my favourite distraction and my motivation all wrapped in one.
-
-I love the way you make everything feel lighter and stress-free, I love the way you make me laugh when all I wanna do is cry, I love the way you attentively listen to my endless yapping even when u r busy in watching reels and playing ff and most importantly, I love the way u love me...
-
-I love you even when I'm mad, I love you when we fight, I love you when we don't talk or chat with each other, I JUST LOVE YOU SOOO MUCHHH
-
-You r the only one who can make my heart calm and crazy at the same time. You are my favourite person to annoy, to laugh with, to daydream about. I don't say it usually but I'm really grateful for u. I’m so glad fate (and your parents 😅) brought you into my life.
-
-I don't know what the future holds for us but if I get to face it with u, I'll know I can face it all and I'll be okay.
-
-I don't wanna write more and bore u so bye 😞🖐️
-</div>
-
-<div class="photos">
-    <img id="photo1" src="https://via.placeholder.com/150" alt="Photo 1">
-    <img id="photo2" src="https://via.placeholder.com/150" alt="Photo 2">
-    <img id="photo3" src="https://via.placeholder.com/150" alt="Photo 3">
-</div>
-
-<div class="notes">
-    <div class="note">“If loving u was a crime, I'm ready for infinite death sentences.”</div>
-    <div class="note">“My charming boyy, I love the way u look at me.”</div>
-    <div class="note">“And 😑 don’t ignore me n watch too much reels, play ff and watch dexter when I wanna talk to u 😑😑😑😑.”</div>
-</div>
-
-<div class="scoreboard">Score: <span id="score">0</span></div>
-<div class="game-container" id="gameContainer"></div>
-
-<audio id="bgMusic" src="your-spotify-or-mp3-link.mp3" autoplay loop></audio>
-
-<script>
-    // Photo upload
-    const photos = document.querySelectorAll('.photos img');
-    photos.forEach(photo => {
-        photo.addEventListener('click', () => {
-            const input = document.createElement('input');
-            input.type = 'file';
-            input.accept = 'image/*';
-            input.onchange = e => {
-                const file = e.target.files[0];
-                const reader = new FileReader();
-                reader.onload = () => { photo.src = reader.result; };
-                reader.readAsDataURL(file);
-            };
-            input.click();
-        });
-    });
-
-    // Heart game
-    const gameContainer = document.getElementById('gameContainer');
-    const scoreEl = document.getElementById('score');
-    let score = 0;
-
-    function createHeart() {
-        const heart = document.createElement('div');
-        heart.classList.add('heart');
-        heart.innerHTML = Math.random() < 0.1 ? '💛' : '❤️';
-        heart.style.left = Math.random() * (gameContainer.offsetWidth - 30) + 'px';
-        heart.style.top = '0px';
-        gameContainer.appendChild(heart);
-
-        const fall = setInterval(() => {
-            const top = parseInt(heart.style.top);
-            if(top > gameContainer.offsetHeight - 30) {
-                heart.remove();
-                clearInterval(fall);
-            } else {
-                heart.style.top = top + 2 + 'px';
-            }
-        }, 20);
-
-        heart.addEventListener('click', () => {
-            score += heart.innerHTML === '💛' ? 5 : 1;
-            scoreEl.textContent = score;
-            if(heart.innerHTML === '💛') triggerConfetti(heart.offsetLeft + 10, heart.offsetTop + 10);
-            heart.remove();
-            clearInterval(fall);
-        });
-    }
-
-    setInterval(createHeart, 800);
-
-    // Floating hearts
-    function floatHeart() {
-        const heart = document.createElement('div');
-        heart.classList.add('floating-heart');
-        heart.innerHTML = '❤️';
-        heart.style.left = Math.random() * window.innerWidth + 'px';
-        heart.style.animationDuration = (5 + Math.random() * 5) + 's';
-        document.body.appendChild(heart);
-        setTimeout(() => heart.remove(), 10000);
-    }
-
-    setInterval(floatHeart, 500);
-
-    // Confetti for golden hearts
-    function triggerConfetti(x, y) {
-        for(let i=0;i<15;i++){
-            const confetti = document.createElement('div');
-            confetti.classList.add('confetti');
-            confetti.style.left = x + 'px';
-            confetti.style.top = y + 'px';
-            confetti.style.setProperty('--x', (Math.random()*100-50)+'px');
-            document.body.appendChild(confetti);
-            setTimeout(() => confetti.remove(), 800);
-        }
-    }
-</script>
-
-</body>
-</html>
+    .envelope:hover {transform:scale(1.1);}
+    .note-box {
+        position:absolute; top:100%; left:50%; transform:translateX(-50%) scaleY(0);
+        ba
