--- a/index.html
+++ b/index.html
@@ -5,39 +5,191 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Love Letter for Abuu Babyy</title>
 <style>
-    * {margin:0; padding:0; box-sizing:border-box;}
-    body {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        background: linear-gradient(135deg, #fce4ec, #ffe0b2);
-        display:flex; flex-direction:column; align-items:center;
-        overflow-x:hidden; padding:10px;
-    }
+* {margin:0; padding:0; box-sizing:border-box;}
+body {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background: linear-gradient(135deg, #fce4ec, #ffe0b2);
+  display:flex; flex-direction:column; align-items:center;
+  overflow-x:hidden; padding:10px;
+}
+header {
+  margin-top:15px; font-size:2.2rem; font-weight:bold;
+  color:#d81b60; text-align:center; text-shadow:1px 1px #fff5;
+}
+.letter {
+  max-width:90%; background:#ffffffcc; padding:15px;
+  margin:15px 0; border-radius:20px; box-shadow:0 8px 16px rgba(0,0,0,0.2);
+  font-size:1rem; line-height:1.5; color:#333; white-space: pre-wrap;
+}
+.photos {
+  display:flex; flex-wrap:wrap; justify-content:center; gap:10px; margin:15px 0;
+}
+.photos img {
+  width:30vw; max-width:150px; height:30vw; max-height:150px;
+  object-fit:cover; border-radius:15px; cursor:pointer; transition:transform 0.2s;
+}
+.photos img:hover {transform:scale(1.05);}
+.envelopes {display:flex; justify-content:center; gap:15px; margin-bottom:15px;}
+.envelope {
+  width:80px; height:60px; background:#f8bbd0; border-radius:5px;
+  display:flex; align-items:center; justify-content:center; cursor:pointer;
+  position:relative; box-shadow:0 4px 8px rgba(0,0,0,0.2);
+  transition:transform 0.3s;
+}
+.envelope:hover {transform:scale(1.1);}
+.envelope::before {
+  content:""; position:absolute; top:0; left:0; width:100%; height:100%;
+  background:#f06292; clip-path: polygon(0 0, 100% 0, 50% 50%);
+  transition:transform 0.3s;
+}
+.note-box {
+  position:absolute; top:100%; left:50%; transform:translateX(-50%) scaleY(0);
+  background:#fff; padding:10px; border-radius:10px; width:200px; text-align:center;
+  box-shadow:0 4px 10px rgba(0,0,0,0.2); transition:transform 0.3s ease;
+  transform-origin:top; z-index:10; pointer-events:none;
+}
+.note-box.show {
+  transform:translateX(-50%) scaleY(1);
+  pointer-events:auto;
+}
+iframe {
+  border-radius:12px; margin:15px 0; width:100%; max-width:300px; height:380px; border:none;
+}
+.game-section {margin-top:20px; width:90%; max-width:320px;}
+.scoreboard {font-size:1.3rem; color:#d81b60; margin-bottom:10px;}
+.game-container {
+  position:relative; width:100%; height:300px; background:#ffe0b2;
+  border-radius:20px; overflow:hidden; margin-bottom:30px;
+  box-shadow:0 8px 16px rgba(0,0,0,0.2);
+}
+.heart {position:absolute; font-size:1.8rem; cursor:pointer; user-select:none; transition:transform 0.2s;}
+.floating-heart {position:fixed; font-size:1.5rem; opacity:0.7; pointer-events:none; animation:floatUp linear;}
+.confetti {position:absolute; width:5px; height:5px; background:gold; border-radius:50%; pointer-events:none; animation:confettiFall 0.8s forwards;}
+@keyframes floatUp {0%{transform:translateY(0) scale(1);opacity:1;}100%{transform:translateY(-800px) scale(0.5);opacity:0;}}
+@keyframes confettiFall {0%{transform:translate(0,0) rotate(0deg); opacity:1;}100%{transform:translate(var(--x,0px),100px) rotate(360deg); opacity:0;}}
+</style>
+</head>
+<body>
 
-    header {margin-top:15px; font-size:2.2rem; font-weight:bold; color:#d81b60; text-align:center; text-shadow:1px 1px #fff5; animation:fadeIn 2s ease-in-out;}
+<header>For My Abuu Babyy 💖</header>
 
-    .letter {
-        max-width:90%; background:#ffffffcc; padding:15px; margin:15px 0; border-radius:20px;
-        box-shadow:0 8px 16px rgba(0,0,0,0.2); font-size:1rem; line-height:1.5; color:#333; animation:fadeInUp 1.5s ease-in-out;
-        white-space: pre-wrap;
-    }
+<div class="letter">
+My dearest sweet lil babyboyy
 
-    .photos {
-        display:flex; flex-wrap:wrap; justify-content:center; gap:10px; margin:15px 0; animation:fadeIn 2s ease-in-out;
-    }
+I don't even know where to start...I know I mess up sometimes...okayyyy....maybee a LOT OF TIMESSSS but please know I never mean to hurt you. You mean everything to me.
 
-    .photos img {
-        width:30vw; max-width:150px; height:30vw; max-height:150px; object-fit:cover; border-radius:15px;
-        cursor:pointer; transition:transform 0.2s;
-    }
+Everytime I think of u, I smile like a damn fool. You are my comfort, my favourite distraction and my motivation all wrapped in one.
 
-    .photos img:hover {transform:scale(1.05);}
+I love the way you make everything feel lighter and stress-free, I love the way you make me laugh when all I wanna do is cry, I love the way you attentively listen to my endless yapping even when u r busy in watching reels and playing ff and most importantly, I love the way u love me...
 
-    .envelopes {display:flex; justify-content:center; gap:15px; margin-bottom:15px;}
-    .envelope {
-        width:80px; height:80px; background:#f8bbd0; border-radius:10px; display:flex; align-items:center; justify-content:center;
-        cursor:pointer; position:relative; box-shadow:0 4px 8px rgba(0,0,0,0.2); transition:transform 0.3s;
-    }
-    .envelope:hover {transform:scale(1.1);}
-    .note-box {
-        position:absolute; top:100%; left:50%; transform:translateX(-50%) scaleY(0);
-        ba
+I love you even when I'm mad, I love you when we fight, I love you when we don't talk or chat with each other, I JUST LOVE YOU SOOO MUCHHH
+
+You r the only one who can make my heart calm and crazy at the same time. You are my favourite person to annoy, to laugh with, to daydream about. I don't say it usually but I'm really grateful for u. I’m so glad fate (and your parents 😅) brought you into my life.
+
+I don't know what the future holds for us but if I get to face it with u, I'll know I can face it all and I'll be okay.
+
+I don't wanna write more and bore u so bye 😞🖐️
+</div>
+
+<div class="photos">
+    <img id="photo1" src="https://via.placeholder.com/150" alt="Photo 1">
+    <img id="photo2" src="https://via.placeholder.com/150" alt="Photo 2">
+    <img id="photo3" src="https://via.placeholder.com/150" alt="Photo 3">
+</div>
+
+<iframe src="https://open.spotify.com/embed/playlist/70uTz6qW8DzwpajBUWLd7E?utm_source=generator" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
+<div class="envelopes">
+    <div class="envelope">
+        <div class="note-box">“If loving u was a crime, I'm ready for infinite death sentences.”</div>
+    </div>
+    <div class="envelope">
+        <div class="note-box">“My charming boyy, I love the way u look at me.”</div>
+    </div>
+    <div class="envelope">
+        <div class="note-box">“And 😑 don’t ignore me n watch too much reels, play ff and watch dexter when I wanna talk to u 😑😑😑😑.”</div>
+    </div>
+</div>
+
+<div class="game-section">
+    <div class="scoreboard">Score: <span id="score">0</span></div>
+    <div class="game-container" id="gameContainer"></div>
+</div>
+
+<script>
+// Photo upload
+document.querySelectorAll('.photos img').forEach(photo=>{
+  photo.addEventListener('click',()=>{
+    const input=document.createElement('input');
+    input.type='file'; input.accept='image/*';
+    input.onchange=e=>{
+      const file=e.target.files[0];
+      const reader=new FileReader();
+      reader.onload=()=>{photo.src=reader.result;};
+      reader.readAsDataURL(file);
+    };
+    input.click();
+  });
+});
+
+// Envelope toggle
+document.querySelectorAll('.envelope').forEach(env=>{
+  env.addEventListener('click',()=>{
+    env.querySelector('.note-box').classList.toggle('show');
+  });
+});
+
+// Heart game
+const gameContainer=document.getElementById('gameContainer');
+const scoreEl=document.getElementById('score');
+let score=0;
+
+function createHeart(){
+  const heart=document.createElement('div');
+  heart.classList.add('heart');
+  heart.innerHTML=Math.random()<0.1?'💛':'❤️';
+  heart.style.left=Math.random()*(gameContainer.offsetWidth-30)+'px';
+  heart.style.top='0px';
+  gameContainer.appendChild(heart);
+  const fall=setInterval(()=>{
+    const top=parseInt(heart.style.top);
+    if(top>gameContainer.offsetHeight-30){ heart.remove(); clearInterval(fall); }
+    else heart.style.top=(top+2)+'px';
+  },20);
+  heart.addEventListener('click',()=>{
+    score+=heart.innerHTML==='💛'?5:1;
+    scoreEl.textContent=score;
+    if(heart.innerHTML==='💛'){ triggerConfetti(heart.offsetLeft+10,heart.offsetTop+10); }
+    heart.remove(); clearInterval(fall);
+  });
+}
+setInterval(createHeart,800);
+
+// Floating hearts
+function floatHeart(){
+  const heart=document.createElement('div');
+  heart.classList.add('floating-heart');
+  heart.innerHTML='❤️';
+  heart.style.left=Math.random()*window.innerWidth+'px';
+  heart.style.fontSize=(10+Math.random()*20)+'px';
+  heart.style.animationDuration=(3+Math.random()*3)+'s';
+  document.body.appendChild(heart);
+  setTimeout(()=>heart.remove(),4000);
+}
+setInterval(floatHeart,500);
+
+// Confetti
+function triggerConfetti(x,y){
+  for(let i=0;i<20;i++){
+    const conf=document.createElement('div');
+    conf.classList.add('confetti');
+    conf.style.left=x+'px';
+    conf.style.top=y+'px';
+    conf.style.setProperty('--x',(Math.random()*100-50)+'px');
+    document.body.appendChild(conf);
+    setTimeout(()=>conf.remove(),800);
+  }
+}
+</script>
+</body>
+</html>
