--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@ I don't wanna write more and bore u so bye 😞🖐️
 </div>
 
 <div class="photos">
-    <img id="photo1" src="https://drive.google.com/uc?export=view&id=1N4TX3cdo67_ADk3RkbKXgMaqMSbxd5qn" alt="Photo 1">
-    <img id="photo2" src="https://drive.google.com/uc?export=view&id=1nezwsvZi8vZi8bX_ZJ_P8AnRh6cBH6xu" alt="Photo 2">
-    <img id="photo3" src="https://drive.google.com/uc?export=view&id=1q7lbLNWdbbMH1YlosLyvbc2KbEY65l0o" alt="Photo 3">
+    <img id="photo1" src="https://raw.githubusercontent.com/badampal/for-my-baby/main/IMG_20251023_212908_854.jpg" alt="Photo 1">
+    <img id="photo2" src="https://raw.githubusercontent.com/badampal/for-my-baby/main/Scanned_20251023-2348.jpg" alt="Photo 2">
+    <img id="photo3" src="https://raw.githubusercontent.com/badampal/for-my-baby/main/Screenshot_2025-10-23-21-32-06-49_99c04817c0de5652397fc8b56c3b3817.jpg" alt="Photo 3">
 </div>
 
 <iframe src="https://open.spotify.com/embed/playlist/70uTz6qW8DzwpajBUWLd7E?utm_source=generator&autoplay=1" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
